deploy/m-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: registry-basic-auth
spec:
  basicAuth:
    secret: registry-basic-auth
