deploy/nginx-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-green
  labels:
    run: nginx-green
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
  selector:
    run: nginx-green
