deploy/nginx-deploy-main-traefik-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.k0s.example.com`)
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 8088
      middlewares:
        - name: registry-basic-auth
