deploy/traefik-metrics.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.k3s.ohmidasvn.dev`)
      kind: Rule
      services:
        - kind: TraefikService
          name: prometheus@internal
      middlewares:
        - name: registry-basic-auth
  tls:
    secretName: k3s-ohmidasvn-dev-tls
